# RaspberryPiNV

./: README.md  config.py  main.py  pyproject.toml
motor/: __init__.py  stepper_controller.py  sun_predictor.py
sensors/: __init__.py  bme280.py  icm20948.py  ltr390.py  mock.py  sgp40.py  tsl2591.py
tests/: test_solar_tracking.py
